2006-05-04	Daichi Kawahata <daichi@xfce.org>

	* Makefile.am, configure.in.in, docs/manual/Makefile.am,
	  docs/manual/ja/Makefile.am,
	  docs/manual/ja/exo-preferred-applications.xml.in,
	  docs/manual/ja/images/Makefile.am,
	  docs/manual/ja/images/exo-preferred-applications-internet.png,
	  docs/manual/ja/images/exo-preferred-applications-utilities.png,
	  docs/manual/ja/images/exo-preferred-applications-webbrowser-custom.png,
	  docs/manual/ja/images/exo-preferred-applications-webbrowser-menu.png,
	  po-doc/ChangeLog, po-doc/LINGUAS, po-doc/Makefile.am,
	  po-doc/exo-preferred-applications.pot, po-doc/ja.po: Import
	  initial Japanese translations and related files.

2006-05-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c, exo/exo-url.c: Apply patches from Oliver
	  Lehmann <oliver@freebsd.org> to fix the compilation on older
	  FreeBSD systems.

2006-05-01	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-md5.c: RedHat/Fedora requires md5global.h
	  before md5.h can be used. Bug #1732.

2006-04-19	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_scroll_to_item): Avoid scrolling
	  horizontally (to the right) if the item width is larger than the
	  available allocation width, which fixes a weird scrolling bug with
	  the compact view. Bug #1683.

2006-04-19	Benedikt Meurer <benny@xfce.org>

	* exo-helper/exo-preferred-applications-settings.c(mcs_plugin_init):
	  Mark button label translation. Bug #1669.
	* po/libexo-0.3.pot, po/*.po: Update translations.

2006-04-17	Benedikt Meurer <benny@xfce.org>

	* exo-helper/exo-helper.c(exo_helper_execute): Finally fix the helper
	  command execution.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.6beta1 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on Xfce 4.2.2 or above.