@@ -30,7 +30,7 @@ AC_COPYRIGHT([Copyright (c) 2004-2006 os-cillation.
 All rights reserved.
         
 Written by Benedikt Meurer <benny@xfce.org>.])
-AC_INIT([exo], [libexo_version()], [benny@xfce.org])
+AC_INIT([exo], [libexo_version()], [http://bugzilla.xfce.org/])
 AC_PREREQ([2.50])
 AC_REVISION([$Id$])
 AC_CANONICAL_TARGET()
@@ -82,8 +82,9 @@ dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
-                  md5.h md5global.h mmintrin.h regex.h string.h sys/resource.h \
-                  sys/stat.h sys/time.h sys/types.h sys/wait.h time.h])
+                  md5.h md5global.h mmintrin.h regex.h stdarg.h string.h \
+                  sys/resource.h sys/stat.h sys/time.h sys/types.h sys/wait.h \
+                  time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
